# PySpriteKit

./: .gitignore  LICENSE  README.md  aaaa.py  physics_test.py  pyproject.toml  requirements.txt  setup.py  test.py
assets/textures/: Sprite-0001.json
gamekit/: __init__.py  actor.py  fsm.py  math.py  matrix.py  parent.py  physics.py  quaternion.py  raylib.py  scene.py  vector.py
spritekit/: __init__.py  _drawable.py  _glfw.py  _renderer.py  _shader.py  _window.py  actions.py  actor.py  actors.py  audio.py  cache.py  camera.py  drawable.py  easing.py  emitter.py  fsm.py  label.py  main.py  math.py  matrix.py  physics.py  quaternion.py  raylib.py  renderer.py  scene.py  shader.py  shapes.py  sprite.py  state.py  texture.py  timer.py  vector.py  window.py
