[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spritekit"
version = "0.0.4"
authors = [
  { name="George Watson", email="gigolo@hotmail.co.uk" },
]
description = "2D scene+actor framework built on top of raylib"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cffi==1.17.1",
    "multipledispatch==1.0.0",
    "numpy==2.2.2",
    "pycparser==2.22",
    "pyglsl==0.0.5",
    "raylib==5.5.0.2",
    "six==1.17.0",
    "transitions==0.9.2",
    "typing==3.7.4.3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/takeiteasy/PySpriteKit"
Issues = "https://github.com/takeiteasy/PySpriteKit/issues"
